fix: css/prevent overflow due to floats

--- a/css/main.css
+++ b/css/main.css
@@ -143,6 +143,7 @@ body.restaurant main #map-container {
 #restaurant-container {
     background: #fff;
     width: 100%;
+    overflow: auto;
 }
 
 
